# midstream

./: .dockerignore  .gitignore  AIMDS_SESSION_SUMMARY.md  Cargo.toml  Dockerfile.test  FINAL_ANALYSIS.md  OPTIMIZATION_REPORT.md  README.md  SECRETARY_MODE_FIX_ANALYSIS.md  VECTOR_CACHE_IMPLEMENTATION.md  docker-compose.test.yml  package-lock.json  package.json  security-report.json  test_step
AIMDS/: .gitignore  Cargo.toml  DEPLOYMENT.md  NPM_PUBLISH_GUIDE.md  PUBLISHING_GUIDE.md  QUICK_START.md  WASM_OPTIMIZATION_COMPLETE.md  WASM_QUICKSTART.md
AIMDS/.cargo/: config.toml
AIMDS/crates/aimds-analysis/: Cargo.toml
AIMDS/crates/aimds-analysis/src/: behavioral.rs  lib.rs  wasm.rs
AIMDS/crates/aimds-core/: Cargo.toml
AIMDS/crates/aimds-core/src/: lib.rs  wasm.rs
AIMDS/crates/aimds-detection/: Cargo.toml  IMPLEMENTATION.md
AIMDS/crates/aimds-detection/src/: lib.rs  pattern_matcher.rs  wasm.rs
AIMDS/crates/aimds-response/: Cargo.toml
AIMDS/crates/aimds-response/src/: error.rs  lib.rs  meta_learning.rs  mitigations.rs  rollback.rs  wasm.rs
AIMDS/docs/: CI_CD_OPTIMIZATION_GUIDE.md  OPTIMIZATION_INDEX.md  SHARED_TEST_INFRASTRUCTURE_DESIGN.md  TEST_INFRASTRUCTURE_ANALYSIS.md  TEST_QUICK_REFERENCE.md  WASM_CONFIG_COMPLETE.md  WASM_OPTIMIZATION.md  WASM_OPTIMIZATION_SUMMARY.md
AIMDS/scripts/: build-wasm-optimized.sh
crates/nanosecond-scheduler/: Cargo.toml
crates/nanosecond-scheduler/src/: lib.rs
crates/strange-loop/: Cargo.toml
crates/strange-loop/benches/: meta_bench.rs
crates/strange-loop/src/: lib.rs
crates/temporal-attractor-studio/: Cargo.toml
crates/temporal-attractor-studio/src/: lib.rs
crates/temporal-compare/: Cargo.toml
crates/temporal-compare/src/: lib.rs
crates/temporal-neural-solver/: Cargo.toml
crates/temporal-neural-solver/src/: lib.rs
crates/text-transform/: Cargo.toml  pyproject.toml  test_debug.rs
crates/text-transform/benches/: transform_bench.rs
crates/text-transform/examples/: debug_spacing.rs
crates/text-transform/src/: lib.rs  python_bindings.rs  rules.rs  spacing.rs
crates/text-transform/src/v3/: config.rs  fuzzy_matcher.rs  hybrid_engine.rs  mod.rs  static_rules.rs
crates/text-transform/tests/: number_tests.rs  programming_tests.rs  transform_tests.rs
npm-aimds/: .aimds.yaml  .env.example  .gitignore  .npmignore  AIMDS_NPM_FINAL_STATUS.md  CHANGELOG.md  CLI-IMPLEMENTATION-SUMMARY.md  Cargo.toml  FILES.md  IMPLEMENTATION_SUMMARY.md  MEMORY_POOLING_QUICKSTART.md  PACKAGE_SUMMARY.md  PUBLICATION_SUCCESS.md  README-CLI.md  README.md  README_PARALLEL.md  TESTING_SUMMARY.md  TEST_STATUS.md  VALIDATION_CHECKLIST.md  aidefence-0.1.1.tgz  cli-new.js  cli.js  index.d.ts  index.js  package.json  publish-npm.sh  tsconfig.json  vitest.config.js  webpack.config.js
npm-aimds/benchmarks/: README.md  comparison-bench.ts  detection-bench.js  load-test.js  monitor-performance.js  stress-test-results.json  stress-test.js  throughput-results.json  throughput-validation.js
npm-aimds/docs/: ARCHITECTURE.md  DEPLOYMENT.md  PROXY.md  PROXY_IMPLEMENTATION.md  PROXY_README.md
npm-aimds/examples/: README.md  advanced-integration.js  basic-detection.js  basic-server.js  client-example.js  learning-integration.js  proxy-anthropic.js  proxy-multi-provider.js  proxy-openai.js  proxy-standalone.js  vector-cache-demo.js
npm-aimds/scripts/: build-pkg.sh  build-wasm.sh  generate-pattern-variations.js  migrate-patterns.js  test-agentdb-simple.js
npm-aimds/src/: proxy.js  quic-server.js  stream.js
npm-aimds/src/analysis/: index.js
npm-aimds/src/api/v2/: detect-batch.js  routes.js
npm-aimds/src/cli/commands/: analyze.js  benchmark.js  config.js  detect.js  metrics.js  respond.js  stream.js  test.js  verify.js  (+1 more)
npm-aimds/src/commands/: analyze.js  benchmark.js  config.js  detect.js  metrics.js  respond.js  stream.js  test.js  verify.js  watch.js
npm-aimds/src/config/: index.js
npm-aimds/src/detection/: index.js  worker.js
npm-aimds/src/integrations/: agentdb-integration.js  agentdb.js  audit.js  lean.js  prometheus.js
npm-aimds/src/intelligence/: README.md  embeddings.d.ts  embeddings.js  embeddings.ts  index.d.ts  index.js  index.ts  schemas.d.ts  schemas.js  schemas.ts  threat-vector-store.js  tsconfig.json  vector-cache.js  vector-store-integration.js  vector-store.d.ts  vector-store.js  vector-store.ts
npm-aimds/src/learning/: README.md  index.js  reasoningbank.js  reflexion-engine.js
npm-aimds/src/proxy/: detection-engine-agentdb.js  detector-worker.js  memory-pooling-integration-example.js  parallel-detector.js  pattern-cache.js
npm-aimds/src/response/: index.js
npm-aimds/src/security/: api-key-encryption.js
npm-aimds/src/utils/: formatters.js  index.js  input-validator.js  io.js  memory-pool.js  wasm-loader.js
npm-aimds/src/verification/: index.js
npm-aimds/tests/: COVERAGE_REPORT_INSTRUCTIONS.md  INDEX.md  QUICK_START.md  README.md  detection.test.js  generate-report.ts  global-setup.js  global-teardown.js  jest.config.js  package.json  proxy.test.js  quic-server.test.js  run-all-tests.sh  run-tests.sh  setup.js  setup.ts
npm-aimds/tests/api/: batch-detection.test.js  batch-integration.test.js
npm-aimds/tests/benchmarks/: quick-wins-performance.bench.js  vector-search-perf.test.js
npm-aimds/tests/detectors/: multimodal-detector.test.js  neurosymbolic-detector.test.js
npm-aimds/tests/fixtures/: mock-data.ts
npm-aimds/tests/integration/: agentdb-integration.test.js  end-to-end.test.js  end-to-end.test.ts
npm-aimds/tests/intelligence/: embeddings.test.js  vector-store.test.js
npm-aimds/tests/learning/: reasoningbank.test.js  reflexion-engine.test.js
npm-aimds/tests/load/: k6-load-test.js
npm-aimds/tests/performance/: detection-performance.test.ts  throughput-validation.test.js  verification-performance.test.ts
npm-aimds/tests/quick-wins/: batch-api.test.js  memory-pool.test.js  parallel-detector.test.js  pattern-cache.test.js  vector-cache.test.js
npm-aimds/tests/security/: injection-tests.test.js
npm-aimds/tests/unit/: agentdb-client.test.ts  gateway-server.test.ts  verifier.test.ts
(+344 files in other folders)
