[package]
name = "nanosecond-scheduler"
version = "0.1.0"
edition = "2021"
description = "Ultra-low-latency real-time task scheduler"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.42.0", features = ["full"] }
crossbeam = "0.8"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
