[package]
name = "strange-loop"
version = "0.1.0"
edition = "2021"
description = "Self-referential systems and meta-learning"
license = "MIT"

[dependencies]
temporal-compare = { path = "../temporal-compare" }
temporal-attractor-studio = { path = "../temporal-attractor-studio" }
temporal-neural-solver = { path = "../temporal-neural-solver" }
nanosecond-scheduler = { path = "../nanosecond-scheduler" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
dashmap = "6.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
