[package]
name = "temporal-attractor-studio"
version = "0.1.0"
edition = "2021"
description = "Dynamical systems and strange attractors analysis"
license = "MIT"

[dependencies]
temporal-compare = { path = "../temporal-compare" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
nalgebra = "0.33"
ndarray = "0.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
