[package]
name = "temporal-compare"
version = "0.1.0"
edition = "2021"
description = "Temporal sequence comparison and pattern matching"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
dashmap = "6.1"
lru = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
