[package]
name = "temporal-neural-solver"
version = "0.1.0"
edition = "2021"
description = "Temporal logic with neural reasoning"
license = "MIT"

[dependencies]
nanosecond-scheduler = { path = "../nanosecond-scheduler" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
ndarray = "0.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
