[package]
name = "midstreamer-text-transform"
version = "0.1.0"
edition = "2021"
description = "Static text transformation via lookup tables for voice-to-text punctuation"
license = "MIT"
repository = "https://github.com/ruvnet/midstream"
keywords = ["text", "transformation", "punctuation", "voice", "midstream"]
categories = ["text-processing"]

[lib]
name = "midstreamer_text_transform"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]  # Enable both Python and Rust usage

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
pyo3 = ["dep:pyo3"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "transform_bench"
harness = false
