[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "midstreamer-transform"
version = "0.1.0"
description = "Fast text transformation for voice dictation using Rust FFI"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
keywords = ["text-transformation", "voice-dictation", "rust", "pyo3", "midstream"]

[project.urls]
Homepage = "https://github.com/robertelee78/midstream"
Repository = "https://github.com/robertelee78/midstream"
Issues = "https://github.com/robertelee78/midstream/issues"

[tool.maturin]
module-name = "midstreamer_transform"
features = ["pyo3"]
