[package]
name = "aimds-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aimds-core.workspace = true
temporal-attractor-studio.workspace = true
temporal-neural-solver.workspace = true
strange-loop.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
ndarray = "0.15"
statrs = "0.16"
petgraph = "0.6"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
