[package]
name = "aimds-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and abstractions for AI Manipulation Defense System (AIMDS)"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

# Additional dependencies
derive_more = "0.99"
validator = { version = "0.18", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
proptest.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
