[package]
name = "aimds-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and abstractions for AI Manipulation Defense System (AIMDS)"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

# Additional dependencies
derive_more = "0.99"
validator = { version = "0.18", features = ["derive"] }

# WASM dependencies (optional)
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook", "serde-wasm-bindgen"]
