[package]
name = "aimds-response"
version = "0.1.0"
edition = "2021"
authors = ["AIMDS Team"]
description = "Adaptive response layer with meta-learning for AIMDS threat mitigation"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
midstreamer-strange-loop = { version = "0.1.0", path = "../../../crates/strange-loop" }
aimds-core = { version = "0.1.0", path = "../aimds-core" }
aimds-detection = { version = "0.1.0", path = "../aimds-detection" }
aimds-analysis = { version = "0.1.0", path = "../aimds-analysis" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Collections and data structures
dashmap = "6.1"
parking_lot = "0.12"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Metrics
metrics = "0.24"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio-test = "0.4"
proptest = "1.5"
tempfile = "3.14"

[lib]
name = "aimds_response"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "meta_learning_bench"
harness = false

[[bench]]
name = "mitigation_bench"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_pipeline"
path = "examples/advanced_pipeline.rs"
