[package]
name = "aimds-response"
version = "0.1.0"
edition = "2021"
authors = ["AIMDS Team"]
description = "Adaptive response layer with meta-learning for AIMDS threat mitigation"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies - using workspace = true for version consistency
midstreamer-strange-loop = { version = "0.1.0", path = "../../../crates/strange-loop" }
aimds-core.workspace = true
aimds-detection.workspace = true
aimds-analysis.workspace = true

# Async runtime - aligned with workspace versions
tokio.workspace = true
tokio-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling - FIXED: was thiserror = "2.0", now uses workspace "1.0"
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Collections and data structures - FIXED: was dashmap = "6.1", now uses workspace "5.5"
dashmap.workspace = true
parking_lot.workspace = true

# Time handling
chrono.workspace = true

# Metrics - FIXED: was metrics = "0.24", now uses workspace "0.21"
metrics.workspace = true

# Utilities - FIXED: was uuid = "1.11", now uses workspace "1.6"
uuid.workspace = true
async-trait = "0.1"
futures = "0.3"

# WASM dependencies - using workspace versions with optional flag
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio-test = "0.4"
proptest = "1.5"
tempfile = "3.14"

[lib]
name = "aimds_response"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "console_error_panic_hook", "serde-wasm-bindgen"]

[[bench]]
name = "meta_learning_bench"
harness = false

[[bench]]
name = "mitigation_bench"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_pipeline"
path = "examples/advanced_pipeline.rs"
